--- a/code/Blazora/Pages/Factorio.razor
+++ b/code/Blazora/Pages/Factorio.razor
@@ -55,7 +55,7 @@
 
     @foreach (Generator generator in Game_Engine.self.manager_generator.Values)
     {
-        <CascadingValue Value=generator.recipe>
+        <CascadingValue Value=generator.recipe IsFixed="true">
             <BGenerator /> 
         </CascadingValue>
 
