--- a/code/Blazora/Components/BGenerator_Header_Machine.razor
+++ b/code/Blazora/Components/BGenerator_Header_Machine.razor
@@ -5,8 +5,12 @@
 
 
 
+@code{
 
-<Component_Line_Stock />
+}
+
+
+<BGenerator_Line_Stock />
 
 @{ 
     Resource_Stack stack_tool = get_stack_tool ();
@@ -25,7 +29,7 @@
                                 stack_tool.resource_name, 
                                 1);
                         })
-            text_bottom_right=@(stack_tool.quantity.ToString ())
+            text_bottom_right=@($"{stack_tool.quantity}")
             stack_func_current=@(() => get_loc_val (stack_tool.resource_name))
             stack_func_max=@(() => get_stack_max (stack_tool.resource_name))
             />
