--- a/code/Blazora/Components/BGenerator_Header_Machine.razor
+++ b/code/Blazora/Components/BGenerator_Header_Machine.razor
@@ -30,15 +30,17 @@
                                 1);
                         })
             text_bottom_right=@($"{stack_tool.quantity}")
-            stack_func_current=@(() => get_loc_val (stack_tool.resource_name))
-            stack_func_max=@(() => get_stack_max (stack_tool.resource_name))
+            stack_val_current=@(get_loc_quantity (stack_tool.resource_name))
+            stack_val_max=@(get_stack_quantity_max (stack_tool.resource_name))
             />
 
 
-@code{      
+@code{
+
     public override void listener_setup ()
     {
         base.listener_setup ();
-        listener_add (() => get_stack_tool ().quantity);
+        listener_add (get_stack_tool ().observable_quantity);
     }
+
 }
