--- a/code/Blazora/Components/Chest.razor
+++ b/code/Blazora/Components/Chest.razor
@@ -66,8 +66,8 @@
     public override void listener_setup ()
     {
         base.listener_setup ();
-        listener_add (() => get_stock_val (this.resource_name));
-        listener_add (() => get_stack_max (this.resource_name));
+        listener_add (get_stock_quantity (this.resource_name));
+        listener_add (get_stack_quantity_max (this.resource_name));
     }
 
 
