--- a/code/Blazora/Components/ProgressBar.razor
+++ b/code/Blazora/Components/ProgressBar.razor
@@ -1,14 +1,14 @@
 ﻿@inherits Game_Component
 
-
+@using NS_Blazora_Basic 
 
 @code{
 
     [Parameter] public string background_color { get; set; }
     [Parameter] public string fill_color { get; set; }
     [Parameter] public bool border { get; set; }
-    [Parameter] public int val_max { get; set; } = 100;
-    [Parameter] public Func<int> val_func { get; set; }
+    [Parameter] public ObservableProperty<int> val_max { get; set; } = new ObservableProperty<int> (100);
+    [Parameter] public ObservableProperty<int> val_current { get; set; }
 
 
 
@@ -45,17 +45,21 @@
     public override void listener_setup ()
     {
         base.listener_setup ();
-        listener_add (this.val_func);
-        listener_add (() => this.val_max);
+        listener_add (this.val_current);
+        listener_add (this.val_max);
     }
 
 
 
     public int get_content_width ()
     {
-        int val_current = this.val_func ();
+        if (this.val_current == null)
+        {
+            return 0;
+        }
+        int val_now = this.val_current.Value;
 
-        int val = val_current;
+        int val = val_now;
         if (val < 0)
         {
             val = 0;
@@ -65,7 +69,7 @@
             val = this.val_max;
         }
 
-        float percentage = val_current / (float)this.val_max;
+        float percentage = val_now / (float)this.val_max;
 
         float content_width_original = percentage * (this.position.width);
         content_width_original = (float)Math.Ceiling (content_width_original);
