--- a/code/Blazora/Components/BGenerator_Line_Stock.razor
+++ b/code/Blazora/Components/BGenerator_Line_Stock.razor
@@ -69,6 +69,7 @@
             listener_add (get_loc_quantity (resource_name));
             listener_add (() => get_loc_min (resource_name));
             listener_add (get_stock_quantity (resource_name));
+            listener_add (get_stack_quantity_max (resource_name));
         }
 
         listener_add (get_stack_tool ().observable_quantity);
