--- a/code/Blazora/Pages/Factorio.razor
+++ b/code/Blazora/Pages/Factorio.razor
@@ -13,7 +13,6 @@
 @using Blazora.Scripts
 
 @code{
-        ObservableProperty<string> test = new ObservableProperty<string> ("#00FF00");
 
 }
 
@@ -21,13 +20,12 @@
 
 }
 
-<button @onclick=@(() => { benchmark (); }) />
 
 <div class="noselect">
 
 <h3>Factorio</h3>
 
-    <span>test : @(test.Get ())</span>
+<FPS_Counter />
 
 
 @code{
@@ -45,42 +43,9 @@
     protected override async Task OnInitializedAsync ()
     {
         await base.OnInitializedAsync ();
-        test.changed += (v) => { Console.WriteLine (v); };
         await setup ();
     }
 
-
-    public void benchmark ()
-    {
-        System.Diagnostics.Stopwatch s = new System.Diagnostics.Stopwatch ();
-        s.Start ();
-        long ta;
-        int loop = 100000;
-
-        ta = s.ElapsedMilliseconds;
-        int a = 0;
-        for (int i=0; i<loop; i++)
-        {
-            int v = 0;
-        }
-        Console.WriteLine ($"test 1: {s.ElapsedMilliseconds-ta}");
-
-        ta = s.ElapsedMilliseconds;
-        ObservableProperty<int> b = new ObservableProperty<int> (0);
-        for (int i=0; i<loop; i++)
-        {
-            int v = b;
-        }
-        Console.WriteLine ($"test 2: {s.ElapsedMilliseconds-ta}");
-
-        ta = s.ElapsedMilliseconds;
-        ObservableProperty<int> c = new ObservableProperty<int> (0);
-        for (int i=0; i<loop; i++)
-        {
-            int v = c.Value;
-        }
-        Console.WriteLine ($"test 3: {s.ElapsedMilliseconds-ta}");
-    }
 
 
 }
