--- a/code/Blazora/Components/Cellicon.razor
+++ b/code/Blazora/Components/Cellicon.razor
@@ -170,7 +170,7 @@
     {
         base.listener_setup ();
         
-        listener_add (() => this.val_authorize);
+        //listener_add (() => this.val_authorize);
         listener_add (this.stack_val_current);
         listener_add (this.stack_val_max);
         listener_add (this.hover);
