--- a/code/Blazora/Components/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator.razor
@@ -133,10 +133,18 @@
     {
         base.listener_setup ();
         listener_add (get_stack_tool ().observable_quantity);
-        listener_add (() => Game_Action.from_recipe_is_craft_ready (this.recipe));
+        //listener_add (() => Game_Action.from_recipe_is_craft_ready (this.recipe));
         listener_add (get_stock_quantity (get_result_resource_name ()));
+        listener_add (get_stock_max (get_result_resource_name ()));
         listener_add (get_stack_quantity_max (get_result_resource_name ()));
         listener_add (() => Game_Action.from_recipe_get_job_time_percentage (this.recipe) != 0);
+
+
+        foreach (string resource_name in this.recipe.mix_component.get_list_resource_name ())
+        {
+            listener_add (get_loc_quantity (resource_name));
+            listener_add (get_stock_quantity (resource_name));
+        }
     }
 
     public ObservableProperty<int> job_percentage = new ObservableProperty<int> (0);
