--- a/code/Blazora/Components/FPS_Counter.razor
+++ b/code/Blazora/Components/FPS_Counter.razor
@@ -16,7 +16,7 @@
     color: black;
     ">
 
-    Graph update: @(Game_Page.self.stat_average) ms
+    Graph update: @(Game_Page.self.stat_average.Value) ms
 
 
 </div>
@@ -26,7 +26,7 @@
     public override void listener_setup ()
     {
         base.listener_setup ();
-        listener_add (() => Game_Page.self.stat_average);
+        listener_add (Game_Page.self.stat_average);
     }
 
 }
